# Ai

./: README.md  Travel-Recommendations.py  check.py  pyproject.toml  requirement.txt  template.py
.streamlit/: config.toml
output/: report.md
src/project_aiver2/: crew.py  main.py  test.py
src/project_aiver2/config/: agents.py  agents.yaml  tasks.py  tasks.yaml
test/: test1.html  test2.html  test3.php
